# ros4nix

./: README.md  flake.nix  ros4nix  sample_configuration.nix  test_configuration.nix
next/: README.md  buildDebEnv.nix  default.nix  main_bus.hpp  ros.nix  shell.nix
next/fetchdebs/src/: main.rs
next/src/actuator_ctrl/: CMakeLists.txt  package.xml
next/src/actuator_ctrl/config/: actuator_ctrl_config.yaml
next/src/actuator_ctrl/launch/: actuator.launch
next/src/actuator_ctrl/src/: actuator_ctrl_node.cpp  main_bus.hpp
next/src/can_convert/: CMakeLists.txt  package.xml
next/src/can_convert/msg/: ArmStatus.msg
next/src/can_convert/src/: can_convert_node.cpp
next/src/can_raw/: CMakeLists.txt  package.xml
next/src/can_raw/src/: can_interface.hpp  can_raw_node.cpp
next/src/can_raw_input/: package.xml
next/src/control/: package.xml
next/src/control/config/: static_layer_params.yaml  teleop_logitech.yaml
next/src/control/launch/: move_base.launch  teleop.launch
next/src/heartbeat/src/: heartbeat_server_node.cpp
next/src/hud/: CMakeLists.txt  package.xml
next/src/leds/: CMakeLists.txt  package.xml
next/src/leds/src/: leds_node.cpp
next/src/mapping/config/: postprocessor_pipeline.yaml  test_map.yaml
next/src/mapping/src/: cvt_occupancy.cpp
next/src/motor_ctrl/: package.xml
pure/: README.md  buildDebEnv.nix  default.nix  flake.nix  ros.nix
pure/fetchdebs/: Cargo.toml
pure/src/: compile_flags.txt
pure/src/can_raw/msg/: CanFrame.msg
pure/src/can_raw_input/: CMakeLists.txt
pure/src/can_raw_input/src/: can_interface.hpp  can_raw_input_node.cpp
pure/src/control/: CMakeLists.txt
pure/src/control/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
pure/src/heartbeat/: .clang-format  CMakeLists.txt  package.xml
pure/src/heartbeat/src/: heartbeat_client_node.cpp
pure/src/hud/src/: hud_node.cpp
pure/src/mapping/: CMakeLists.txt  package.xml
pure/src/mapping/config/: .mapping.yaml.swp
pure/src/mapping/launch/: test_map.launch
pure/src/mapping/urdf/: bowie.xacro  goliath.urdf
pure/src/motor_ctrl/: CMakeLists.txt
pure/src/motor_ctrl/config/: motor_ctrl_config.yaml
pure/src/motor_ctrl/launch/: motor.launch
pure/src/motor_ctrl/src/: motor_ctrl_node.cpp
ros/: analysis.nix  default.nix  ros_core.nix  ros_generate_wrappers  ros_services.nix
ros/services/: bagPlayer.nix  default.nix  elevationMapping.nix  kindr.nix  kindrRos.nix  messageLogger.nix  motorCtrl.nix  moveBase.nix  pointcloudConcatenate.nix  realsense.nix  rosLib.nix  rosbridge.nix  staticTransform.nix  testPublisher.nix  usbCamera.nix
ros/services/motor_ctrl/: CMakeLists.txt  package.xml
ros/services/motor_ctrl/launch/: motor.launch
ros/services/motor_ctrl/src/: motor_ctrl_node.py
