<?xml version="1.0"?>
<package format="2">
  <name>heartbeat</name>
  <version>0.0.1</version>
  <description>The heartbeat package</description>

  <maintainer email="niallcdevlin@gmail.com">Niall Devlin</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <exec_depend>roscpp</exec_depend>

</package>

