<?xml version="1.0"?>
<package>
  <name>motor_ctrl</name>
  <version>0.1.0</version>
  <description>ROS package for controlling differential motors with L298N</description>
  
  <maintainer email="niallcdevlin@gmail.com">Niall Devlin</maintainer>
  
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
    <!-- Other export tags, if needed -->
  </export>
</package>

